css/style.css
body, html{
  margin: 0;
  height: 100vh;
  width: 100vw;
  background-color: black;
  font-family: 'Playfair Display', 'Slabo 27px', serif;
}

.container {
  background-color: white;
  justify-content: center;
  z-index: 5;
}

.nav-header {
  position: relative;
  height: 100vh;
  background-image: url("../images/space-mountain-min.jpg");
  color: white;
  background-position: center;
  background-repeat: repeat-x;
  background-size: auto 100%;
  overflow: hidden;
}

nav {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin: 0 auto;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  max-width: 1100px;
}

.nav-items {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 3;
}

.nav-items a{
  width: 90%;
  height: 2em;
  padding: 1em 0;
  margin: 0 1em;
  text-decoration: none;
  color: white;
  border-bottom: 1px solid white;
  text-align: center;
  align-self: center;


}
.nav-logo-btn {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.nav-btn {

  color: white;
  width: 3em;
  text-align: center;
  justify-content: center;
  align-self: center;
  padding: .7em;
  margin-right: 1em;
  border: 1px solid white;
}

.nav-btn:hover {
  cursor: pointer;
}

.intro {
  font-size: 4em;
  text-align: center;
  background-position: center;
  width: 100%;
  position: absolute;
  top: 50%;
  margin-top: -1em;

}
 section {
  background-color: #F8F8F8;
 }

.nav-logo {
  height: 100px;
  width: 100px;
  margin-left: 1em;
}

.parallax-section {
  height: 50vh;
  background-color: black;
  color: white;
  position: relative;
  background-size: auto 100%;
  overflow: hidden;

}

.parallax-section p{
  font-size: 3em;
  text-align: center;
  background-position: center;
  width: 100%;
  position: absolute;
  top: 50%;
  margin-top: -1em;
  z-index: 0;
  transition: 0s linear;
  transition-property: background-position;

}

#about {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#about p{
  max-width: 1100px;
  text-align: justify;
  margin: 2em;

}

.main-container {
  padding: 2em;
  margin: 0 auto;
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 1100px;
}

.main-container2 {
  padding: 2em;
  margin: 0 auto;
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  max-width: 1100px;
}

.main-container3 {
  padding: 2em;
  margin: 0 auto;
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 1100px;
}

.portfolio-item {
  margin: 1em;
  box-shadow: 2px 2px 4px #e6e6e6;
  border-radius: 3px;
  background-color: white;
  position: relative;
  overflow: hidden;
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  width: 300px;
  height: 300px;
  text-decoration: none;
}
.portfolio-item a {
  color: black;
}

.portfolio-image{
  opacity: 1;
   width: 100%;
   height: 100%;
   transition: .4s ease;
   backface-visibility: hidden;
}

.portfolio-info {
  background-color: white;
  position: absolute;
  top: 60%;
  height: 120px;
  width: 100%;
  border-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  overflow: hidden;

}

.portfolio-description {
  margin-top: .5em;
  padding: 0 .8em;
}

.port-date-title {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  align-self: flex-start;
  padding: 0 .8em;
}


.portfolio-title {
  color: #32230E;
  font-size: 1.8em;
}

.portfolio-date {
  display: flex;
  align-items: center;
  align-self: center;
  color: gray;

}

.portfolio-item:hover {
  box-shadow: 5px 5px 5px #fff0e6, -5px -5px 5px #fff0e6;
}

.experience-tile {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 350px;
  background-color: white;
  padding: .3em;
  text-align: center;
  margin: 1em 0;
}


.exp-title {
  font-size: 2em;
}
.exp-description {
  font-size: 1em;
}

.icon-container {
  height: 290px;
  width: 250px;
  display: flex;
  align-self: center;
}
.icon {
  position: relative;
  width:100%;
  margin-bottom: 1em;
}

#experience {
  background-color: white;
  padding: 1em;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}



  footer{
    background-color: white;
    padding: 1em;
  }

  .container3{
    display: flex;
    flex-direction: column;
  }

  .personal-info {
    align-items: center;
    align-self: center;
    margin-left: 2em;
  }

  .contact-info {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    font-size: 1.2em;
    margin: .5em 0;
  }

  .contact-info img{
    height: 75px;
    width: 75px;
  }

@media screen and (min-width: 770px) {
  nav {
    flex-direction: row;
    justify-content: space-between;
  }
  .nav-btn {
    display: none;

  }
  .nav-items {
    flex-direction: row;
    border-bottom: none;
    display: flex !important;
  }
  .nav-items a{
    padding: 0;
  }

  .nav-items a:hover{
    border-bottom: 1px solid #ff9966;
  }

  .nav-header {
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
}

